--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,8 @@
 <app-paragraph2></app-paragraph2>
 
 <app-fourthparagraph></app-fourthparagraph>
+
+<br/>
+<app-note></app-note>
+
+<app-tools></app-tools>
