add pipes and directives

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,16 @@
 <!-- <app-test1></app-test1> -->
 
-<app-paragraph1></app-paragraph1>
+<!-- <app-paragraph1></app-paragraph1>
 
 <app-paragraph2></app-paragraph2>
 
-<app-fourthparagraph></app-fourthparagraph>
+<app-fourthparagraph></app-fourthparagraph> -->
 
 <br/>
-<app-note></app-note>
+<!--
+<app-note></app-note>-->
+
+
+<app-filter></app-filter>
 
 <app-tools></app-tools>
