--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -3,15 +3,9 @@
 
     <div class="filter-div" *ngFor="let category of categories">
 
-        <button mat-raised-button color="primary">{{category.name | uppercase}}</button>
+        <button mat-raised-button color="warn">{{category.name | uppercase}}</button>
 
     </div>
 
 
-
 </div>
-
-<!--
-<button mat-raised-button>To do</button>
-<button mat-raised-button>Done</button>
-<button mat-raised-button>Doing</button> -->
