--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
-<p>home works!</p>
-
-<app-note></app-note>
-
+<br/>
 <app-filter></app-filter>
 
-<app-tools></app-tools>
+<div class="home-style">
+    <app-note></app-note>
+
+    <app-tools></app-tools>
+
+</div>
