--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -12,21 +12,21 @@
             <mat-card-footer class="buttons-container">
 
                 <div class="done-btn">
-                    <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+                    <button mat-icon-button aria-label="Example icon button with a subdirectory_arrow_right icon">
                 <mat-icon>subdirectory_arrow_right</mat-icon>
               </button>
 
-                    <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+                    <button mat-icon-button aria-label="Example icon button with a star_half icon">
                 <mat-icon>star_half</mat-icon>
               </button>
 
-                    <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+                    <button mat-icon-button aria-label="Example icon button with a done_all icon">
                 <mat-icon>done_all</mat-icon>
               </button>
                 </div>
 
                 <div class="delete-btn">
-                    <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+                    <button mat-icon-button aria-label="Example icon button with a delete icon">
               <mat-icon>delete</mat-icon>
             </button>
                 </div>
