--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -30,6 +30,8 @@
 </mat-card>
 
 
+<button class="add-btn-route-params" mat-raised-button color="primary" [routerLink]="['routeparams/','route with params']">Route Params</button>
+
 <!-- <h1>String is: {{"Angular Project Scholarship Trimble" | addHypen:"-"}} </h1>
 
 <div class="pipe-container">
