--- a/src/app/note/note.component.scss
+++ b/src/app/note/note.component.scss
@@ -1,7 +1,7 @@
     .note-card {
         width: 250px;
         height: 250px;
-        background-color: red;
+        background-color: rgba(250, 176, 126, 0.864);
     }
 
     .note-container {
