--- a/NotesApp/src/app/edit-note/edit-note.component.html
+++ b/NotesApp/src/app/edit-note/edit-note.component.html
@@ -19,6 +19,6 @@
         </mat-select>
     </mat-form-field> -->
 
-    <!-- <button type="submit" mat-button (click)="addNote()" [disabled]="checkInputs()">Add</button> -->
+    <button type="submit" mat-button (emitUpdateNote)="editNote($event)">Save</button>
 
 </form>
